Update my-canister-frontend version to 0.1.0 and refine description; update WASM binaries

--- a/my-canister-dapp-rs/my-canister-frontend/Cargo.toml
+++ b/my-canister-dapp-rs/my-canister-frontend/Cargo.toml
@@ -1,13 +1,11 @@
 [package]
 name = "my-canister-frontend"
-version = "0.4.0-beta.24"
-description = "Frontend asset processing library for Internet Computer canisters"
+version = "0.1.0"
+description = "Frontend asset utilities Canister Dapps"
 edition = { workspace = true }
 license = { workspace = true }
 authors = { workspace = true }
 repository = "https://github.com/Web3NL/my-canister-dashboard/tree/main/my-canister-dapp-rs/my-canister-frontend"
-keywords = ["internet-computer", "canister", "frontend", "assets", "ic"]
-categories = ["web-programming", "development-tools"]
 
 [lib]
 crate-type = ["rlib"]
