carg-release config

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,6 @@ serde_json = "1.0"
 sha2 = "0.10.9"
 
 my-canister-dashboard = { path = "my-canister-dapp-rs/my-canister-dashboard" }
+
+[workspace.metadata.release]
+pre-release-hook = ["./scripts/rust-lint-format.sh"]
