--- a/my-canister-dapp-rs/my-canister-dashboard/Cargo.toml
+++ b/my-canister-dapp-rs/my-canister-dashboard/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "my-canister-dashboard"
-version = "0.4.0-beta.24"
+version = "0.5.0"
 description = "Self-contained dashboard assets for Internet Computer canisters"
 edition = { workspace = true }
 license = { workspace = true }
