--- a/my-canister-dapp-rs/my-canister-dashboard/Cargo.toml
+++ b/my-canister-dapp-rs/my-canister-dashboard/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "my-canister-dashboard"
 version = "0.5.0"
-description = "Self-contained dashboard assets for Internet Computer canisters"
+description = "Dashboard assets and management utilities for Internet Computer Canister Dapps"
 edition = { workspace = true }
 license = { workspace = true }
 authors = { workspace = true }
