--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,20 +14,18 @@ authors = ["Samer"]
 repository = "https://github.com/Web3NL/my-canister-dashboard"
 
 [workspace.dependencies]
-candid = "0.10.14"
-hex = "0.4.3"
-ic-asset-certification = "3.0.3"
-ic-cdk = "0.18.5"
-ic-http-certification = "3.0.3"
-include_dir = "0.7.4"
-mime_guess = "2.0.5"
-pocket-ic = "9.0.2"
-serde = { version = "1.0.219", features = ["derive"] }
-serde_cbor = "0.11"
-serde_json = "1.0"
-sha2 = "0.10.9"
-
-my-canister-dashboard = { path = "my-canister-dapp-rs/my-canister-dashboard" }
+candid = "=0.10.14"
+hex = "=0.4.3"
+ic-asset-certification = "=3.0.3"
+ic-cdk = "=0.18.5"
+ic-http-certification = "=3.0.3"
+include_dir = "=0.7.4"
+mime_guess = "=2.0.5"
+pocket-ic = "=9.0.2"
+serde = { version = "=1.0.219", features = ["derive"] }
+serde_cbor = "=0.11.2"
+serde_json = "=1.0.140"
+sha2 = "=0.10.9"
 
 [workspace.metadata.release]
 pre-release-hook = ["../../scripts/rust-lint-format.sh"]
