--- a/examples/my-hello-world/src/my-hello-world/Cargo.toml
+++ b/examples/my-hello-world/src/my-hello-world/Cargo.toml
@@ -9,11 +9,11 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
-candid = "0.10"
-ic-cdk = "0.18"
-ic-asset-certification = "3.0"
-ic-http-certification = "3.0"
-include_dir = "0.7"
+candid = "=0.10.14"
+ic-cdk = "=0.18.5"
+ic-asset-certification = "=3.0.3"
+ic-http-certification = "=3.0.3"
+include_dir = "=0.7.4"
 
-my-canister-dashboard = { path = "../../../../my-canister-dapp-rs/my-canister-dashboard" }
-my-canister-frontend = { path = "../../../../my-canister-dapp-rs/my-canister-frontend" }
+my-canister-frontend = "=0.1.3"
+my-canister-dashboard = "=0.5.1"
