--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "vite-plugin-devtools-json": "0.2.0",
     "vite-plugin-dts": "4.5.4",
     "vitest": "3.2.4",
-    "jsdom": "25.0.1"
+    "jsdom": "25.0.1",
+    "release-it": "17.8.2"
   }
 }
