chore: disable GitHub release for @web3nl/my-canister-dashboard

--- a/my-canister-dapp-js/my-canister-dashboard-js/.release-it.json
+++ b/my-canister-dapp-js/my-canister-dashboard-js/.release-it.json
@@ -12,8 +12,7 @@
         "access": "public"
     },
     "github": {
-        "release": true,
-        "releaseName": "@web3nl/my-canister-dashboard v${version}"
+        "release": false
     },
     "hooks": {
         "before:init": [
