--- a/my-canister-dapp-js/canister-dashboard-frontend/package.json
+++ b/my-canister-dapp-js/canister-dashboard-frontend/package.json
@@ -19,7 +19,7 @@
     "test": "vitest --run"
   },
   "dependencies": {
-    "@web3nl/my-canister-dashboard": "*"
+    "@web3nl/my-canister-dashboard": "0.5.2"
   },
   "devDependencies": {}
 }
