--- a/package.json
+++ b/package.json
@@ -32,41 +32,44 @@
     "@dfinity/agent": "2.4.1",
     "@dfinity/auth-client": "2.4.1",
     "@dfinity/candid": "2.4.1",
-    "@dfinity/cmc": "5.0.5",
+    "@dfinity/cmc": "5.0.7",
     "@dfinity/gix-components": "6.0.0",
-    "@dfinity/ic-management": "6.2.0",
-    "@dfinity/ledger-icp": "2.6.13",
+    "@dfinity/ic-management": "6.2.1",
+    "@dfinity/ledger-icp": "4.0.0",
     "@dfinity/principal": "2.4.1",
-    "@dfinity/utils": "2.13.0",
+    "@dfinity/utils": "2.13.2",
     "lit-html": "2.8.0"
   },
+  "overrides": {
+    "cookie": "0.7.2"
+  },
   "devDependencies": {
-    "@eslint/compat": "1.3.0",
-    "@eslint/js": "9.29.0",
-    "@playwright/test": "1.53.1",
+    "@eslint/compat": "1.3.1",
+    "@eslint/js": "9.31.0",
+    "@playwright/test": "1.54.1",
     "@sveltejs/adapter-static": "3.0.8",
-    "@sveltejs/kit": "2.22.0",
-    "@sveltejs/vite-plugin-svelte": "5.1.0",
+    "@sveltejs/kit": "2.25.1",
+    "@sveltejs/vite-plugin-svelte": "6.1.0",
     "@types/eslint__js": "8.42.3",
-    "@types/node": "24.0.7",
-    "dotenv": "17.1.0",
-    "eslint": "9.29.0",
-    "eslint-config-prettier": "10.1.5",
-    "eslint-plugin-svelte": "3.9.3",
-    "globals": "16.2.0",
-    "prettier": "3.5.3",
+    "@types/node": "24.0.15",
+    "dotenv": "17.2.0",
+    "eslint": "9.31.0",
+    "eslint-config-prettier": "10.1.8",
+    "eslint-plugin-svelte": "3.11.0",
+    "globals": "16.3.0",
+    "prettier": "3.6.2",
     "prettier-plugin-svelte": "3.4.0",
     "sass": "1.89.2",
-    "svelte": "5.34.7",
-    "svelte-check": "4.2.2",
+    "svelte": "5.36.10",
+    "svelte-check": "4.3.0",
     "typescript": "5.8.3",
-    "typescript-eslint": "8.34.1",
+    "typescript-eslint": "8.37.0",
     "typedoc": "0.28.7",
     "vite": "6.3.5",
-    "vite-plugin-devtools-json": "0.2.0",
+    "vite-plugin-devtools-json": "0.3.0",
     "vite-plugin-dts": "4.5.4",
     "vitest": "3.2.4",
-    "jsdom": "25.0.1",
-    "release-it": "17.8.2"
+    "jsdom": "26.1.0",
+    "release-it": "19.0.4"
   }
 }
