--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "vite": "6.3.5",
     "vite-plugin-devtools-json": "0.2.0",
     "vite-plugin-dts": "4.5.4",
+    "vite-plugin-static-copy": "3.1.1",
     "vitest": "3.2.4",
     "jsdom": "25.0.1",
     "release-it": "17.8.2"
