--- a/my-canister-dapp-rs/my-canister-dashboard/Cargo.toml
+++ b/my-canister-dapp-rs/my-canister-dashboard/Cargo.toml
@@ -22,3 +22,9 @@ include_dir = { workspace = true }
 mime_guess = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
+
+[package.metadata.release]
+pre-release-replacements = [
+  {file="../../my-canister-dapp-js/canister-dashboard-frontend/package.json", search="\"version\": \".*\"", replace="\"version\": \"{{version}}\"", exactly=1},
+]
+pre-release-hook = ["../../scripts/prerelease-mcd.sh"]
