fix: correct identity provider and DFX host URLs in development environment

--- a/my-canister-dapp-js/canister-dashboard-frontend/.env.development
+++ b/my-canister-dapp-js/canister-dashboard-frontend/.env.development
@@ -1,3 +1,3 @@
-VITE_IDENTITY_PROVIDER=http://qhbym-qaaaa-aaaaa-aaafq-cai.127.0.0.1:8080
-VITE_DFXHOST=http://127.0.0.1:8080
+VITE_IDENTITY_PROVIDER=http://qhbym-qaaaa-aaaaa-aaafq-cai.localhost:8080
+VITE_DFXHOST=http://localhost:8080
 VITE_CANISTER_ID=22ajg-aqaaa-aaaap-adukq-cai
