feat: enhance build-examples script to copy WASM files to my-canister-app static directory in dev mode

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ test-output/
 # Registry development files
 my-canister-app/static/wasm-registry/registry-dev.json
 wasm/dev/
+my-canister-app/static/wasm/dev/
