chore: update dependencies in package.json
- Removed "@dfinity/gix-components" dependency.
- Updated "@eslint/js" to version 9.31.0.
- Updated "@playwright/test" to version 1.54.1.
- Updated "@sveltejs/kit" to version 2.26.0.
- Updated "@sveltejs/vite-plugin-svelte" to version 6.1.0.
- Updated "@types/node" to version 24.1.0.
- Updated "eslint" to version 9.31.0.
- Updated "eslint-config-prettier" to version 10.1.8.
- Updated "eslint-plugin-svelte" to version 3.11.0.
- Updated "svelte" to version 5.36.16.
- Updated "svelte-check" to version 4.3.0.
- Updated "typescript-eslint" to version 8.38.0.

--- a/examples/my-hello-world/src/my-hello-world-frontend/package.json
+++ b/examples/my-hello-world/src/my-hello-world-frontend/package.json
@@ -17,6 +17,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@web3nl/my-canister-dashboard": "0.5.2"
+    "@web3nl/my-canister-dashboard": "0.5.2",
+    "lit-html": "2.8.0"
   }
 }
