--- a/my-canister-app/package.json
+++ b/my-canister-app/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {},
   "dependencies": {
-    "@web3nl/my-canister-dashboard": "*"
+    "@web3nl/my-canister-dashboard": "0.5.2",
+    "@dfinity/gix-components": "6.0.0"
   }
 }
