--- a/my-canister-dapp-rs/my-canister-dashboard/Cargo.toml
+++ b/my-canister-dapp-rs/my-canister-dashboard/Cargo.toml
@@ -24,6 +24,8 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 
 [package.metadata.release]
+changelog = "CHANGELOG.md"
+changelog-sections = ["Added", "Changed"]
 pre-release-replacements = [
   {file="../../my-canister-dapp-js/canister-dashboard-frontend/package.json", search="\"version\": \".*\"", replace="\"version\": \"{{version}}\"", exactly=1},
 ]
