--- a/my-canister-dapp-rs/my-canister-dashboard/Cargo.toml
+++ b/my-canister-dapp-rs/my-canister-dashboard/Cargo.toml
@@ -24,9 +24,14 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 
 [package.metadata.release]
-changelog = "CHANGELOG.md"
-changelog-sections = ["Added", "Changed"]
 pre-release-replacements = [
-  {file="../../my-canister-dapp-js/canister-dashboard-frontend/package.json", search="\"version\": \".*\"", replace="\"version\": \"{{version}}\"", exactly=1},
+  { file = "../../my-canister-dapp-js/canister-dashboard-frontend/package.json", search = "\"version\": \".*\"", replace = "\"version\": \"{{version}}\"", exactly = 1 },
 ]
-pre-release-hook = ["../../scripts/prebuild-mcd.sh"]
+
+pre-release-hook = [
+  "../../scripts/prebuild-mcd.sh",
+  "../../scripts/rust-lint-format.sh",
+]
+
+# changelog = "CHANGELOG.md"
+# changelog-sections = ["Added", "Changed"]
