--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
   ],
   "scripts": {
     "build": "npm run build --workspaces",
-    "build:app": "npm run build --workspace=my-canister-app",
-    "build:docs": "npm run docs:clean --workspace=@web3nl/my-canister-dashboard && npm run docs:build --workspace=@web3nl/my-canister-dashboard",
     "check": "npm run lint --workspaces && npm run format --workspaces && npm run typecheck --workspaces",
     "fix": "npm run lint:fix --workspaces && npm run format:fix --workspaces && npm run typecheck --workspaces",
-    "test:ii-setup": "playwright test --project=setup-internet-identity",
-    "test:e2e": "playwright test --project=canister-dashboard-frontend --project=my-canister-app",
-    "dev:dashboard": "npm run dev --workspace=canister-dashboard-frontend",
     "dev:app": "npm run dev --workspace=my-canister-app",
-    "serve:docs": "npx http-server my-canister-dapp-js/my-canister-dashboard-js/docs",
-    "deploy:app": "dfx deploy my-canister-app --ic"
+    "build:app": "npm run build --workspace=my-canister-app",
+    "deploy:app": "dfx deploy my-canister-app --ic",
+    "dev:dashboard": "npm run dev --workspace=canister-dashboard-frontend",
+    "build:derive-ii-principal": "cd tests/derive-ii-principal && vite build",
+    "test:derive-ii-principal": "npm run build:derive-ii-principal && playwright test tests/derive-ii-principal/derive-ii-principal.spec.ts",
+    "test:e2e": "./scripts/run-test-e2e.sh",
+    "build:docs": "npm run docs:clean --workspace=@web3nl/my-canister-dashboard && npm run docs:build --workspace=@web3nl/my-canister-dashboard",
+    "serve:docs": "npx http-server my-canister-dapp-js/my-canister-dashboard-js/docs"
   },
   "dependencies": {
     "@dfinity/agent": "2.4.1",
