--- a/my-canister-dapp-js/canister-dashboard-frontend/package.json
+++ b/my-canister-dapp-js/canister-dashboard-frontend/package.json
@@ -19,5 +19,8 @@
   },
   "dependencies": {
     "@web3nl/my-canister-dashboard": "0.5.3"
+  },
+  "devDependencies": {
+    "@web3nl/vite-plugin-dapp-config": "file:../vite-plugin-dapp-config"
   }
 }
