--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "workspaces": [
     "my-canister-dapp-js/my-canister-dashboard-js",
     "my-canister-dapp-js/canister-dashboard-frontend",
+    "my-canister-dapp-js/vite-plugin-dapp-config",
     "my-canister-app",
     "examples/my-hello-world/src/my-hello-world-frontend"
   ],
