--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,6 +34,7 @@
   "include": [
     "my-canister-dapp-js/canister-dashboard-frontend/src/**/*",
     "my-canister-dapp-js/my-canister-dashboard-js/src/**/*",
+    "my-canister-dapp-js/vite-plugin-dapp-config/src/**/*",
     "tests/**/*",
     "examples/my-hello-world/src/**/*"
   ],
