feat: update test configurations and add unit tests for canister dashboard

--- a/my-canister-dapp-js/my-canister-dashboard-js/package.json
+++ b/my-canister-dapp-js/my-canister-dashboard-js/package.json
@@ -38,6 +38,7 @@
     "format": "prettier --check src",
     "format:fix": "prettier --write src",
     "typecheck": "tsc --noEmit",
+    "test": "vitest --run",
     "docs:build": "typedoc",
     "docs:clean": "rm -rf docs"
   },
