--- a/my-canister-dapp-js/my-canister-dashboard-js/tsconfig.json
+++ b/my-canister-dapp-js/my-canister-dashboard-js/tsconfig.json
@@ -1,7 +1,6 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "rootDir": "./src",
     "baseUrl": ".",
     "paths": {
       "$declarations/*": [
@@ -10,6 +9,7 @@
     }
   },
   "include": [
-    "src/**/*"
+    "src/**/*",
+    "test/**/*"
   ]
 }
