vite plugin wip

--- a/my-canister-dapp-js/vite-plugin-canister-dapp/package.json
+++ b/my-canister-dapp-js/vite-plugin-canister-dapp/package.json
@@ -34,5 +34,8 @@
     "web3"
   ],
   "author": "Samer",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "dotenv": "^16.4.5"
+  }
 }
