feat: update environment configuration and dependencies for canister dashboard development

--- a/examples/my-hello-world/src/my-hello-world-frontend/package.json
+++ b/examples/my-hello-world/src/my-hello-world-frontend/package.json
@@ -17,6 +17,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@dfinity/utils": "^2.4.0",
     "@web3nl/my-canister-dashboard": "0.5.2",
     "lit-html": "2.8.0"
   },
