--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "test:create-ii-account": "playwright test tests/create-ii-account/create-ii-account.spec.ts",
     "test:derive-ii-principal": "npm run build:derive-ii-principal && playwright test tests/derive-ii-principal/derive-ii-principal.spec.ts",
     "test:e2e": "./scripts/run-test-e2e.sh",
-    "build:docs": "npm run docs:clean --workspace=@web3nl/my-canister-dashboard && npm run docs:build --workspace=@web3nl/my-canister-dashboard",
-    "serve:docs": "npx http-server my-canister-dapp-js/my-canister-dashboard-js/docs"
+    "build:docs:dashboard": "npm run docs:clean --workspace=@web3nl/my-canister-dashboard && npm run docs:build --workspace=@web3nl/my-canister-dashboard",
+    "build:docs:vite-plugin": "npm run docs:clean --workspace=@web3nl/vite-plugin-canister-dapp && npm run docs:build --workspace=@web3nl/vite-plugin-canister-dapp",
+    "build:docs": "npm run build:docs:dashboard && npm run build:docs:vite-plugin"
   },
   "dependencies": {
     "@dfinity/agent": "2.4.1",
