fix: update my-canister-dashboard version to 0.8.0 and adjust dependencies in Cargo.toml and package.json

--- a/examples/my-hello-world/src/my-hello-world-frontend/package.json
+++ b/examples/my-hello-world/src/my-hello-world-frontend/package.json
@@ -22,6 +22,6 @@
     "lit-html": "2.8.0"
   },
   "devDependencies": {
-    "@web3nl/vite-plugin-canister-dapp": "file:../../../../../my-canister-dapp-js/vite-plugin-canister-dapp"
+    "@web3nl/vite-plugin-canister-dapp": "0.1.1"
   }
 }
