--- a/my-canister-app/package.json
+++ b/my-canister-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-canister-app",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "type": "module",
   "engines": {
     "node": ">=18.0.0"
@@ -15,9 +15,9 @@
     "format:fix": "prettier --write src",
     "typecheck": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json"
   },
-  "devDependencies": {},
   "dependencies": {
-    "@web3nl/my-canister-dashboard": "0.5.2",
-    "@dfinity/gix-components": "6.0.0"
-  }
+    "@dfinity/gix-components": "6.0.0",
+    "@web3nl/my-canister-dashboard": "0.5.2"
+  },
+  "deployedAtCommit": "86a7b9a0f56ca7742b06d96523cc46f94f705653"
 }
