--- a/examples/my-hello-world/src/my-hello-world-frontend/package.json
+++ b/examples/my-hello-world/src/my-hello-world-frontend/package.json
@@ -1,27 +1,27 @@
 {
   "name": "my-hello-world-frontend",
-  "private": true,
   "version": "4.0.0",
-  "type": "module",
-  "engines": {
-    "node": ">=18.0.0"
-  },
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "build:dev": "vite build --mode development",
-    "lint": "eslint src",
-    "lint:fix": "eslint src --fix",
-    "format": "prettier --check src",
-    "format:fix": "prettier --write src",
-    "typecheck": "tsc --noEmit"
-  },
   "dependencies": {
-    "@dfinity/utils": "^2.4.0",
-    "@web3nl/my-canister-dashboard": "0.5.2",
+    "@dfinity/utils": "^2.13.0",
+    "@web3nl/my-canister-dashboard": "0.5.3",
     "lit-html": "2.8.0"
   },
   "devDependencies": {
     "@web3nl/vite-plugin-canister-dapp": "0.1.1"
-  }
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "private": true,
+  "scripts": {
+    "build": "vite build",
+    "build:dev": "vite build --mode development",
+    "dev": "vite",
+    "format": "prettier --check src",
+    "format:fix": "prettier --write src",
+    "lint": "eslint src",
+    "lint:fix": "eslint src --fix",
+    "typecheck": "tsc --noEmit"
+  },
+  "type": "module"
 }
