--- a/my-canister-dapp-js/canister-dashboard-frontend/package.json
+++ b/my-canister-dapp-js/canister-dashboard-frontend/package.json
@@ -1,25 +1,25 @@
 {
   "name": "canister-dashboard-frontend",
-  "version": "0.8.0",
   "description": "Dashboard frontend assets for Internet Computer Canister Dapps",
-  "repository": "https://github.com/Web3NL/my-canister-dashboard/tree/main/my-canister-dapp-js/canister-dashboard-frontend",
-  "type": "module",
-  "engines": {
-    "node": ">=18.0.0"
-  },
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint src",
-    "lint:fix": "eslint src --fix",
-    "format": "prettier --check src",
-    "format:fix": "prettier --write src",
-    "typecheck": "tsc --noEmit"
-  },
+  "version": "0.8.0",
   "dependencies": {
     "@web3nl/my-canister-dashboard": "0.5.3"
   },
   "devDependencies": {
-    "@web3nl/vite-plugin-canister-dapp": "file:../vite-plugin-canister-dapp"
-  }
+    "@web3nl/vite-plugin-canister-dapp": "0.1.1"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "repository": "https://github.com/Web3NL/my-canister-dashboard/tree/main/my-canister-dapp-js/canister-dashboard-frontend",
+  "scripts": {
+    "build": "vite build",
+    "dev": "vite",
+    "format": "prettier --check src",
+    "format:fix": "prettier --write src",
+    "lint": "eslint src",
+    "lint:fix": "eslint src --fix",
+    "typecheck": "tsc --noEmit"
+  },
+  "type": "module"
 }
