--- a/package.json
+++ b/package.json
@@ -1,42 +1,16 @@
 {
-  "type": "module",
-  "engines": {
-    "node": ">=18.0.0"
-  },
-  "workspaces": [
-    "my-canister-dapp-js/vite-plugin-canister-dapp",
-    "my-canister-dapp-js/my-canister-dashboard-js",
-    "my-canister-dapp-js/canister-dashboard-frontend",
-    "my-canister-app",
-    "examples/my-hello-world/src/my-hello-world-frontend"
-  ],
-  "scripts": {
-    "build": "npm run build --workspaces",
-    "check": "npm run lint --workspaces && npm run format --workspaces && npm run typecheck --workspaces",
-    "fix": "npm run lint:fix --workspaces && npm run format:fix --workspaces && npm run typecheck --workspaces",
-    "dev:app": "npm run dev --workspace=my-canister-app",
-    "build:app": "npm run build --workspace=my-canister-app",
-    "deploy:app": "dfx deploy my-canister-app --ic",
-    "dev:dashboard": "npm run dev --workspace=canister-dashboard-frontend",
-    "build:derive-ii-principal": "cd tests/derive-ii-principal && vite build",
-    "test:create-ii-account": "playwright test tests/create-ii-account/create-ii-account.spec.ts",
-    "test:derive-ii-principal": "npm run build:derive-ii-principal && playwright test tests/derive-ii-principal/derive-ii-principal.spec.ts",
-    "test:e2e": "./scripts/run-test-e2e.sh",
-    "build:docs:dashboard": "npm run docs:clean --workspace=@web3nl/my-canister-dashboard && npm run docs:build --workspace=@web3nl/my-canister-dashboard",
-    "build:docs:vite-plugin": "npm run docs:clean --workspace=@web3nl/vite-plugin-canister-dapp && npm run docs:build --workspace=@web3nl/vite-plugin-canister-dapp",
-    "build:docs": "npm run build:docs:dashboard && npm run build:docs:vite-plugin"
-  },
   "dependencies": {
-    "@dfinity/agent": "2.4.1",
+    "@dfinity/agent": "^2.4.1",
     "@dfinity/auth-client": "2.4.1",
-    "@dfinity/candid": "2.4.1",
+    "@dfinity/candid": "^2.4.1",
     "@dfinity/cmc": "5.0.5",
-    "@dfinity/ic-management": "6.2.0",
+    "@dfinity/ic-management": "^6.2.0",
     "@dfinity/ledger-icp": "2.6.13",
-    "@dfinity/principal": "2.4.1",
-    "@dfinity/utils": "2.13.0"
+    "@dfinity/principal": "^2.4.1",
+    "@dfinity/utils": "^2.13.0"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.29.5",
     "@eslint/js": "9.31.0",
     "@playwright/test": "1.54.1",
     "@sveltejs/adapter-static": "3.0.8",
@@ -49,17 +23,51 @@
     "eslint-plugin-svelte": "3.11.0",
     "globals": "16.2.0",
     "jsdom": "25.0.1",
+    "knip": "^5.62.0",
     "prettier": "3.5.3",
     "prettier-plugin-svelte": "3.4.0",
     "sass": "1.89.2",
     "svelte": "5.36.16",
     "svelte-check": "4.3.0",
+    "syncpack": "^13.0.4",
     "typedoc": "0.28.7",
     "typescript": "5.8.3",
     "typescript-eslint": "8.38.0",
-    "vite": "6.3.5",
+    "vite": "^6.3.5",
     "vite-plugin-devtools-json": "0.2.0",
     "vite-plugin-dts": "4.5.4",
     "vitest": "3.2.4"
-  }
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "scripts": {
+    "build": "npm run build --workspaces",
+    "build:app": "npm run build --workspace=my-canister-app",
+    "build:derive-ii-principal": "cd tests/derive-ii-principal && vite build",
+    "build:docs": "npm run build:docs:dashboard && npm run build:docs:vite-plugin",
+    "build:docs:dashboard": "npm run docs:clean --workspace=@web3nl/my-canister-dashboard && npm run docs:build --workspace=@web3nl/my-canister-dashboard",
+    "build:docs:vite-plugin": "npm run docs:clean --workspace=@web3nl/vite-plugin-canister-dapp && npm run docs:build --workspace=@web3nl/vite-plugin-canister-dapp",
+    "changeset": "changeset",
+    "check": "npm run lint --workspaces && npm run format --workspaces && npm run typecheck --workspaces",
+    "deploy:app": "dfx deploy my-canister-app --ic",
+    "deps:check": "syncpack list-mismatches && knip --dependencies --workspace my-canister-dapp-js/my-canister-dashboard-js && knip --dependencies --workspace my-canister-dapp-js/vite-plugin-canister-dapp",
+    "deps:fix": "syncpack format",
+    "dev:app": "npm run dev --workspace=my-canister-app",
+    "dev:dashboard": "npm run dev --workspace=canister-dashboard-frontend",
+    "fix": "npm run lint:fix --workspaces && npm run format:fix --workspaces && npm run typecheck --workspaces",
+    "release:publish": "changeset publish",
+    "release:version": "changeset version",
+    "test:create-ii-account": "playwright test tests/create-ii-account/create-ii-account.spec.ts",
+    "test:derive-ii-principal": "npm run build:derive-ii-principal && playwright test tests/derive-ii-principal/derive-ii-principal.spec.ts",
+    "test:e2e": "./scripts/run-test-e2e.sh"
+  },
+  "type": "module",
+  "workspaces": [
+    "my-canister-dapp-js/vite-plugin-canister-dapp",
+    "my-canister-dapp-js/my-canister-dashboard-js",
+    "my-canister-dapp-js/canister-dashboard-frontend",
+    "my-canister-app",
+    "examples/my-hello-world/src/my-hello-world-frontend"
+  ]
 }
