chore: update package.json files to include license and repository information, add LICENSE files, and adjust config settings

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -12,5 +12,9 @@
   "access": "public",
   "baseBranch": "main",
   "updateInternalDependencies": "patch",
-  "ignore": []
+  "ignore": [
+    "canister-dashboard-frontend",
+    "my-hello-world-frontend",
+    "my-canister-app"
+  ]
 }
