--- a/examples/my-hello-world/src/my-hello-world-frontend/package.json
+++ b/examples/my-hello-world/src/my-hello-world-frontend/package.json
@@ -13,6 +13,8 @@
     "node": ">=18.0.0"
   },
   "private": true,
+  "license": "MIT",
+  "repository": "https://github.com/Web3NL/my-canister-dapp/tree/main/examples/my-hello-world/src/my-hello-world-frontend",
   "scripts": {
     "build": "vite build",
     "build:dev": "vite build --mode development",
