--- a/my-canister-dapp-js/canister-dashboard-frontend/package.json
+++ b/my-canister-dapp-js/canister-dashboard-frontend/package.json
@@ -2,6 +2,8 @@
   "name": "canister-dashboard-frontend",
   "description": "Dashboard frontend assets for Internet Computer Canister Dapps",
   "version": "0.8.0",
+  "private": true,
+  "license": "MIT",
   "dependencies": {
     "@web3nl/my-canister-dashboard": "0.5.3"
   },
@@ -11,7 +13,7 @@
   "engines": {
     "node": ">=18.0.0"
   },
-  "repository": "https://github.com/Web3NL/my-canister-dashboard/tree/main/my-canister-dapp-js/canister-dashboard-frontend",
+  "repository": "https://github.com/Web3NL/my-canister-dapp/tree/main/my-canister-dapp-js/canister-dashboard-frontend",
   "scripts": {
     "build": "vite build",
     "dev": "vite",
