--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "private": true,
+  "packageManager": "npm@10.9.2",
   "dependencies": {
     "@dfinity/agent": "^2.4.1",
     "@dfinity/auth-client": "2.4.1",
