--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@dfinity/utils": "^2.13.0"
   },
   "devDependencies": {
+    "@changesets/changelog-github": "^0.5.1",
     "@changesets/cli": "^2.29.5",
     "@eslint/js": "9.31.0",
     "@playwright/test": "1.54.1",
