chore: update GitHub Actions workflows for tag patterns and add workflow dispatch triggers; enhance release publish script to include git push

--- a/.github/workflows/publish-canister-dashboard-js-docs.yml
+++ b/.github/workflows/publish-canister-dashboard-js-docs.yml
@@ -3,7 +3,8 @@ name: Publish My Canister Dashboard JS Docs to GitHub Pages
 on:
   push:
     tags:
-      - 'web3nl/my-canister-dashboard-v*'
+      - '@web3nl/my-canister-dashboard@*'
+  workflow_dispatch:
 
 jobs:
   publish-docs:
