--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -1,14 +1,15 @@
-name: Publish Vite Plugin Docs to GitHub Pages
+name: Publish package docs to GitHub Pages
 
 on:
   push:
     tags:
+      - '@web3nl/my-canister-dashboard@*'
       - '@web3nl/vite-plugin-canister-dapp@*'
   workflow_dispatch:
 
 jobs:
-  publish:
-    name: Publish Vite Plugin Docs to GitHub Pages
+  publish-docs:
+    name: Build and publish docs for both packages
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -31,24 +32,35 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Build package
-        run: npm run build --workspace=@web3nl/vite-plugin-canister-dapp
+      - name: Build packages (both)
+        run: |
+          npm run build --workspace=@web3nl/my-canister-dashboard
+          npm run build --workspace=@web3nl/vite-plugin-canister-dapp
 
-      - name: Build documentation
-        run: npm run docs:build --workspace=@web3nl/vite-plugin-canister-dapp
+      - name: Build documentation (both)
+        run: npm run build:docs
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
 
-      - name: Create docs structure
+      - name: Prepare Pages artifact
         run: |
+          # Ensure Pages deploy root exists and Jekyll is disabled
+          mkdir -p ./pages-deploy
+          touch ./pages-deploy/.nojekyll
+
+          # Copy My Canister Dashboard JS docs
+          mkdir -p ./pages-deploy/web3nl-my-canister-dashboard-js
+          cp -r ./my-canister-dapp-js/my-canister-dashboard-js/docs/* ./pages-deploy/web3nl-my-canister-dashboard-js/
+
+          # Copy Vite Plugin docs
           mkdir -p ./pages-deploy/web3nl-vite-plugin-canister-dapp
           cp -r ./my-canister-dapp-js/vite-plugin-canister-dapp/docs/* ./pages-deploy/web3nl-vite-plugin-canister-dapp/
 
       - name: Upload docs to Pages
         uses: actions/upload-pages-artifact@v3
         with:
-          path: './pages-deploy'
+          path: ./pages-deploy
 
       - name: Deploy to GitHub Pages
         id: deployment
