feat: add changelog and pre-release replacements for versioning

--- a/my-canister-dapp-rs/canister-dapp-test/Cargo.toml
+++ b/my-canister-dapp-rs/canister-dapp-test/Cargo.toml
@@ -17,3 +17,12 @@ pocket-ic = { workspace = true }
 ic-http-certification = { workspace = true }
 
 my-canister-dashboard = "=0.5.1"
+
+[package.metadata.release]
+pre-release-replacements = [
+    # Replace the "Unreleased" header with the new version and date
+    { file = "CHANGELOG.md", search = "## \\[Unreleased\\]", replace = "## [{{version}}] - {{date}}", exactly = 1 },
+
+    # Optional: keep an "Unreleased" section at the top after tagging
+    { file = "CHANGELOG.md", search = "(?m)^# Changelog\\n", replace = "# Changelog\n\n## [Unreleased]\n", exactly = 1 },
+]
