--- a/my-canister-dapp-rs/my-canister-frontend/Cargo.toml
+++ b/my-canister-dapp-rs/my-canister-frontend/Cargo.toml
@@ -20,3 +20,12 @@ ic-http-certification = { workspace = true }
 ic-cdk = { workspace = true }
 include_dir = { workspace = true }
 mime_guess = { workspace = true }
+
+[package.metadata.release]
+pre-release-replacements = [
+    # Replace the "Unreleased" header with the new version and date
+    { file = "CHANGELOG.md", search = "## \\[Unreleased\\]", replace = "## [{{version}}] - {{date}}", exactly = 1 },
+
+    # Optional: keep an "Unreleased" section at the top after tagging
+    { file = "CHANGELOG.md", search = "(?m)^# Changelog\\n", replace = "# Changelog\n\n## [Unreleased]\n", exactly = 1 },
+]
