--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,30 @@
+# Environment files
+.env
+.env.*
+!.env.example
+!.env.test*
+
+# Vite local env files
+**/.env
+**/.env.*
+!**/.env.example
+!**/.env.test*
+
+# Node and build artifacts
+node_modules/
+dist/
+.build/
+.cache/
+.coverage/
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# macOS
+.DS_Store
 # Environments
 .env
 .env.development
