--- a/my-canister-dapp-rs/my-canister-dashboard/Cargo.toml
+++ b/my-canister-dapp-rs/my-canister-dashboard/Cargo.toml
@@ -18,10 +18,13 @@ candid = { workspace = true }
 ic-asset-certification = { workspace = true }
 ic-http-certification = { workspace = true }
 ic-cdk = { workspace = true }
+ic-cdk-timers = { workspace = true }
+icrc-ledger-types = { workspace = true }
 include_dir = { workspace = true }
 mime_guess = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
+num-traits = { workspace = true }
 
 [package.metadata.release]
 pre-release-replacements = [
