test: manage top up rule CRUD

--- a/my-canister-dapp-rs/canister-dapp-test/Cargo.toml
+++ b/my-canister-dapp-rs/canister-dapp-test/Cargo.toml
@@ -15,8 +15,9 @@ hex = { workspace = true }
 ic-cdk = { workspace = true }
 pocket-ic = { workspace = true }
 ic-http-certification = { workspace = true }
+# my-canister-dashboard = "=0.5.1"
+my-canister-dashboard = { path = "../my-canister-dashboard" }
 
-my-canister-dashboard = "=0.5.1"
 
 [package.metadata.release]
 pre-release-replacements = [
