--- a/examples/my-hello-world/src/my-hello-world/Cargo.toml
+++ b/examples/my-hello-world/src/my-hello-world/Cargo.toml
@@ -16,4 +16,5 @@ ic-http-certification = "=3.0.3"
 include_dir = "=0.7.4"
 
 my-canister-frontend = "=0.1.3"
-my-canister-dashboard = "=0.9.0"
+# my-canister-dashboard = "=0.9.0"
+my-canister-dashboard = { path = "../../../../my-canister-dapp-rs/my-canister-dashboard" }
