--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,11 +18,14 @@ candid = "=0.10.14"
 hex = "=0.4.3"
 ic-asset-certification = "=3.0.3"
 ic-cdk = "=0.18.5"
+ic-cdk-timers = "=0.12.2"
 ic-http-certification = "=3.0.3"
 include_dir = "=0.7.4"
+icrc-ledger-types = "=0.1.10"
 mime_guess = "=2.0.5"
 pocket-ic = "=9.0.2"
 serde = { version = "=1.0.219", features = ["derive"] }
 serde_cbor = "=0.11.2"
 serde_json = "=1.0.140"
 sha2 = "=0.10.9"
+num-traits = "=0.2.19"
