feat: manage top up rule in canister dashboard frontend

--- a/my-canister-dapp-js/canister-dashboard-frontend/tsconfig.json
+++ b/my-canister-dapp-js/canister-dashboard-frontend/tsconfig.json
@@ -5,7 +5,7 @@
     "baseUrl": ".",
     "paths": {
       "$declarations/*": [
-        "../../declarations/*"
+        "../my-canister-dashboard-js/declarations/*"
       ]
     }
   },
