--- a/my-canister-dapp-js/my-canister-dashboard-js/package.json
+++ b/my-canister-dapp-js/my-canister-dashboard-js/package.json
@@ -22,6 +22,7 @@
   },
   "files": [
     "dist",
+    "declarations",
     "README.md",
     "LICENSE"
   ],
@@ -49,6 +50,7 @@
     "directory": "my-canister-dapp-js/my-canister-dashboard-js"
   },
   "scripts": {
+    "prebuild": "../../scripts/generate-declarations.sh",
     "build": "vite build",
     "docs:build": "typedoc",
     "docs:clean": "rm -rf docs",
