--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ ic-asset-certification = "=3.0.3"
 ic-cdk = "=0.18.5"
 ic-cdk-timers = "=0.12.2"
 ic-http-certification = "=3.0.3"
+ic-ledger-types = "=0.15.0"
 include_dir = "=0.7.4"
 icrc-ledger-types = "=0.1.10"
 mime_guess = "=2.0.5"
