--- a/my-canister-dapp-rs/my-canister-dashboard/Cargo.toml
+++ b/my-canister-dapp-rs/my-canister-dashboard/Cargo.toml
@@ -19,6 +19,7 @@ ic-asset-certification = { workspace = true }
 ic-http-certification = { workspace = true }
 ic-cdk = { workspace = true }
 ic-cdk-timers = { workspace = true }
+ic-ledger-types = { workspace = true }
 icrc-ledger-types = { workspace = true }
 include_dir = { workspace = true }
 mime_guess = { workspace = true }
