--- a/my-canister-dapp-js/canister-dashboard-frontend/package.json
+++ b/my-canister-dapp-js/canister-dashboard-frontend/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "license": "MIT",
   "dependencies": {
-    "@web3nl/my-canister-dashboard": "file:../my-canister-dashboard-js"
+    "@web3nl/my-canister-dashboard": "0.6.1"
   },
   "devDependencies": {
     "@web3nl/vite-plugin-canister-dapp": "0.2.0"
