--- a/examples/my-hello-world/src/my-hello-world/Cargo.toml
+++ b/examples/my-hello-world/src/my-hello-world/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [lib]
 crate-type = ["cdylib"]
+path = "src/lib-ng.rs"
 
 [dependencies]
 candid = "=0.10.14"
@@ -15,6 +16,5 @@ ic-asset-certification = "=3.0.3"
 ic-http-certification = "=3.0.3"
 include_dir = "=0.7.4"
 
-my-canister-frontend = "=0.1.3"
-my-canister-dashboard = "=0.10.0"
-# my-canister-dashboard = { path = "../../../../my-canister-dapp-rs/my-canister-dashboard" }
+my-canister-frontend = { path = "../../../../my-canister-dapp-rs/my-canister-frontend" }
+my-canister-dashboard = "0.10.0"
