--- a/my-canister-dapp-rs/my-canister-frontend/Cargo.toml
+++ b/my-canister-dapp-rs/my-canister-frontend/Cargo.toml
@@ -15,11 +15,14 @@ repository = "https://github.com/Web3NL/my-canister-dapp/tree/main/my-canister-d
 crate-type = ["rlib"]
 
 [dependencies]
+candid = { workspace = true }
 ic-asset-certification = { workspace = true }
 ic-http-certification = { workspace = true }
 ic-cdk = { workspace = true }
 include_dir = { workspace = true }
 mime_guess = { workspace = true }
+
+my-canister-dashboard = "0.10.0"
 
 [package.metadata.release]
 pre-release-replacements = [
