--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "dependencies": {
     "@dfinity/agent": "^2.4.1",
-    "@dfinity/auth-client": "2.4.1",
+    "@dfinity/auth-client": "^2.4.1",
     "@dfinity/candid": "^2.4.1",
-    "@dfinity/cmc": "5.0.5",
-    "@dfinity/ic-management": "^6.2.0",
-    "@dfinity/ledger-icp": "2.6.13",
+    "@dfinity/cmc": "^5.0.8",
+    "@dfinity/ic-management": "^6.2.2",
+    "@dfinity/ledger-icp": "^4.1.0",
     "@dfinity/principal": "^2.4.1",
-    "@dfinity/utils": "^2.13.0"
+    "@dfinity/utils": "^2.14.0"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.1",
@@ -23,7 +23,7 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-svelte": "^3.11.0",
     "globals": "^16.3.0",
-    "jsdom": "^25.0.1",
+    "jsdom": "^26.1.0",
     "knip": "^5.62.0",
     "prettier": "^3.6.2",
     "prettier-plugin-svelte": "^3.4.0",
@@ -34,15 +34,15 @@
     "typedoc": "^0.28.10",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.39.1",
-    "vite": "^6.3.5",
-    "vite-plugin-devtools-json": "^0.4.1",
+    "vite": "^7.1.2",
+    "vite-plugin-devtools-json": "^1.0.0",
     "vite-plugin-dts": "^4.5.4",
     "vitest": "^3.2.4"
   },
   "engines": {
     "node": ">=18.0.0"
   },
-  "packageManager": "npm@10.9.2",
+  "packageManager": "npm@11.5.2",
   "private": true,
   "scripts": {
     "build": "npm run build --workspaces",
