--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@dfinity/auth-client": "^2.4.1",
     "@dfinity/candid": "^2.4.1",
     "@dfinity/cmc": "^5.0.8",
+    "@dfinity/gix-components": "^8.0.0",
     "@dfinity/ic-management": "^6.2.2",
     "@dfinity/ledger-icp": "^4.1.0",
     "@dfinity/principal": "^2.4.1",
