GPT5 implemented fake cmc functions

--- a/dfx-env/fake-cmc/Cargo.toml
+++ b/dfx-env/fake-cmc/Cargo.toml
@@ -15,3 +15,4 @@ ic-cdk = { workspace = true }
 serde_bytes = { workspace = true }
 serde_derive = { workspace = true }
 serde = { workspace = true }
+ic-ledger-types = { workspace = true }
