--- a/dfx-env/fake-cmc/Cargo.toml
+++ b/dfx-env/fake-cmc/Cargo.toml
@@ -12,7 +12,8 @@ crate-type = ["cdylib", "rlib"]
 candid = "0.10.17"
 candid_parser = "0.2.1"
 ic-cdk = "0.18.7"
+ic-ledger-types = "0.15.0"
+icrc-ledger-types = "0.1.10"
 serde_bytes = "0.11.15"
 serde_derive = "1.0.219"
 serde = { version = "1.0.219", features = ["derive"] }
-ic-ledger-types = "0.15.0"
