--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,23 +10,23 @@ resolver = "2"
 [workspace.package]
 edition = "2024"
 license = "MIT"
-authors = ["Samer"]
+authors = ["Web3NL"]
 repository = "https://github.com/Web3NL/my-canister-dapp"
 
 [workspace.dependencies]
-candid = "=0.10.14"
-hex = "=0.4.3"
-ic-asset-certification = "=3.0.3"
-ic-cdk = "=0.18.5"
-ic-cdk-timers = "=0.12.2"
-ic-http-certification = "=3.0.3"
-ic-ledger-types = "=0.15.0"
-include_dir = "=0.7.4"
-icrc-ledger-types = "=0.1.10"
-mime_guess = "=2.0.5"
-pocket-ic = "=9.0.2"
-serde = { version = "=1.0.219", features = ["derive"] }
-serde_cbor = "=0.11.2"
-serde_json = "=1.0.140"
-sha2 = "=0.10.9"
-num-traits = "=0.2.19"
+candid = "0.10.17"
+hex = "0.4.3"
+ic-asset-certification = "3.0.3"
+ic-cdk = "0.18.7"
+ic-cdk-timers = "0.12.2"
+ic-http-certification = "3.0.3"
+ic-ledger-types = "0.15.0"
+include_dir = "0.7.4"
+icrc-ledger-types = "0.1.10"
+mime_guess = "2.0.5"
+pocket-ic = "9.0.2"
+serde = { version = "1.0.219", features = ["derive"] }
+serde_cbor = "0.11.2"
+serde_json = "1.0.143"
+sha2 = "0.10.9"
+num-traits = "0.2.19"
