--- a/examples/my-hello-world/src/my-hello-world/Cargo.toml
+++ b/examples/my-hello-world/src/my-hello-world/Cargo.toml
@@ -10,12 +10,11 @@ crate-type = ["cdylib"]
 path = "src/lib-ng.rs"
 
 [dependencies]
-candid = "=0.10.14"
-ic-cdk = "=0.18.5"
-ic-asset-certification = "=3.0.3"
-ic-http-certification = "=3.0.3"
-include_dir = "=0.7.4"
+candid.workspace = true
+ic-cdk.workspace = true
+ic-asset-certification.workspace = true
+ic-http-certification.workspace = true
+include_dir.workspace = true
 
 my-canister-frontend = { path = "../../../../my-canister-dapp-rs/my-canister-frontend" }
 my-canister-dashboard = { path = "../../../../my-canister-dapp-rs/my-canister-dashboard" }
-# my-canister-dashboard = "0.10.0"
