fix: tsconfig key deprecation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,10 +32,9 @@
     // Ensure consistent cross-platform behavior
     "preserveSymlinks": false,
     "preserveWatchOutput": true,
-    "baseUrl": ".",
     "paths": {
       "$declarations/*": [
-        "declarations/*"
+        "./declarations/*"
       ]
     }
   },
