--- a/examples/my-hello-world/tsconfig.json
+++ b/examples/my-hello-world/tsconfig.json
@@ -2,9 +2,8 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "noEmit": true,
-    "baseUrl": ".",
     "paths": {
-      "$declarations/*": ["src/declarations/*"]
+      "$declarations/*": ["./src/declarations/*"]
     }
   },
   "include": [
